deployment-master/base/knowhere-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowhere-ui-deployment
spec:
  selector:
    matchLabels:
      name: knowhere-ui
  template:
    metadata:
      labels:
        name: knowhere-ui
    spec:
      containers:
        - name: knowhere-ui
          image: zalerix/thesis-knowhere-vui:latest
          livenessProbe:
            httpGet:
              port: 80
              path: /health/liveness
          readinessProbe:
            httpGet:
              port: 80
              path: /health/liveness
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 80
              name: app-port
