deployment-master/base/knowhere-ui/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowhere-ui-url
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 80
      targetPort: 80
  selector:
    name: knowhere-ui
